[package]
name = "t_convert"
version = "2.0.2"
edition = "2024"
documentation = "https://docs.rs/t_convert"
description = "A rust library which can take integer or floating point inputs, or parsed string inputs in order to convert temperature between the units of Celsius, Fahrenheit, and Kelvin."
repository = "https://github.com/Darethan026/t_convert"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["convert", "temp", "t_conv", "efficient", "conversion"]
categories = ["command-line-utilities", "mathematics"]
authors = ["Ethan <kigangadarell@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
